--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -18,4 +18,4 @@ RUN apk --no-cache --update add sudo build-base ruby-dev && \
 EXPOSE 24284
 
 USER root
-CMD exec fluentd -c ../fluentd/etc/$FLUENTD_CONF -p ../fluentd/plugins $FLUENTD_OPT
+CMD exec fluentd -c /fluentd/etc/$FLUENTD_CONF -p /fluentd/plugins $FLUENTD_OPT
