--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,15 +1,10 @@
 <source>
   @type tail
-  path /var/log/containers/*.log
-  pos_file fluentd-docker.pos
+  path /var/log/apps/application/*.txt
   time_format %Y-%m-%dT%H:%M:%S
-  tag kubernetes.*
   format json
 </source>
 
-<filter kubernetes.**>
-  type kubernetes_metadata
-</filter>
 
 <match **>
   @type               kafka_buffered
