changed path to hostlogs

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,6 +1,6 @@
 <source>
   @type tail
-  path /var/log/apps/application/*.txt
+  path /hostlogs/*/*.txt
   time_format %Y-%m-%dT%H:%M:%S
   format json
   tag log
