--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,6 +1,7 @@
 <source>
   @type tail
-  path /hostlogs/*/*.txt
+  path /hostlogs/log-generator-default-10.128.72.4/all_logs.txt
+  pos_file fluentd-namedfile.pos
   time_format %Y-%m-%dT%H:%M:%S
   format json
   tag log
