reverted to old conf file for testing

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,10 +1,10 @@
 <source>
   @type tail
-  path /hostlogs/log-generator-default-10.128.72.4/all_logs.txt
-  pos_file fluentd-namedfile.pos
+  path /var/log/containers/*.log
+  pos_file fluentd-docker.pos
   time_format %Y-%m-%dT%H:%M:%S
+  tag kubernetes.*
   format json
-  tag log
 </source>
 
 
