changed path to node level filesystem

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,9 +1,9 @@
 <source>
   @type tail
-  path /var/log/containers/*.log
-  pos_file fluentd-docker.pos
+  path /var/log/containers/*/*.txt
+  pos_file fluentd-namedfile.pos
   time_format %Y-%m-%dT%H:%M:%S
-  tag kubernetes.*
+  tag named.*
   format json
 </source>
 
@@ -13,7 +13,7 @@
   zookeeper           zk:2181
   zookeeper_path      /kafka/brokers/ids
   output_data_type    json
-  default_topic       logs_default
+  default_topic       named_file_test
   compression_codec   gzip
   required_acks       1
 </match>
