changed topic back to logs_default

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -13,7 +13,7 @@
   zookeeper           zk:2181
   zookeeper_path      /kafka/brokers/ids
   output_data_type    json
-  default_topic       named_file_test
+  default_topic       logs_default
   compression_codec   gzip
   required_acks       1
 </match>
