--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,6 +1,6 @@
 <source>
   @type tail
-  path /var/log/containers/log-generator-default-10.129.140.5/*.txt
+  path /var/log/containers/*/*.txt
   pos_file fluentd-namedfile.pos
   time_format %Y-%m-%dT%H:%M:%S
   tag named.*
