--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,12 +1,28 @@
 <source>
   @type tail
-  path /var/log/containers/*/*.txt
+  path /var/log/containers/*/*.*
   pos_file fluentd-namedfile.pos
   time_format %Y-%m-%dT%H:%M:%S
   tag named.*
   format json
 </source>
 
+<source>
+  @type tail
+  path /var/log/containers/*.log
+  pos_file fluentd-docker.pos
+  time_format %Y-%m-%dT%H:%M:%S
+  tag kubernetes.*
+  format json
+</source>
+
+<filter kubernetes.**>
+  type kubernetes_metadata
+</filter>
+
+<filter named.**>
+  type deirdre_test_filter
+</filter>
 
 <match **>
   @type               kafka_buffered
