added @ to tail and added record_transformer for test

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -17,11 +17,18 @@
 </source>
 
 <filter kubernetes.**>
-  type kubernetes_metadata
+  @type kubernetes_metadata
 </filter>
 
 <filter named.**>
-  type deirdre_test_filter
+  @type deirdre_test_filter
+</filter>
+
+<filter named.**>
+   @type record_transformer
+   <record>
+     message "brooklynpizza"
+   </record>
 </filter>
 
 <match **>
