changed match pattern for filter

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -24,10 +24,10 @@
   @type deirdre_test_filter
 </filter>
 
-<filter named.**>
+<filter **>
    @type record_transformer
    <record>
-     message "brooklynpizza"
+     message brooklynpizza
    </record>
 </filter>
 
