changed match pattern to isolate events from named file

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -11,7 +11,7 @@
   @type deirdre_test_filter
 </filter>
 
-<match **>
+<match named.**>
   @type               kafka_buffered
   zookeeper           zk:2181
   zookeeper_path      /kafka/brokers/ids
