put kube metadata filter back in

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -7,11 +7,24 @@
   format json
 </source>
 
+<source>
+  @type tail
+  path /var/log/containers/*.log
+  pos_file fluentd-docker.pos
+  time_format %Y-%m-%dT%H:%M:%S
+  tag kubernetes.*
+  format json
+</source>
+
 <filter named.**>
   @type deirdre_test_filter
 </filter>
 
-<match named.**>
+<filter kubernetes.**>
+  type kubernetes_metadata
+</filter>
+
+<match **>
   @type               kafka_buffered
   zookeeper           zk:2181
   zookeeper_path      /kafka/brokers/ids
