--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -4,25 +4,17 @@
   pos_file fluentd-namedfile.pos
   time_format %Y-%m-%dT%H:%M:%S
   tag named.*
-  format json
+  format none
 </source>
 
-<source>
-  @type tail
-  path /var/log/containers/*.log
-  pos_file fluentd-docker.pos
-  time_format %Y-%m-%dT%H:%M:%S
-  tag kubernetes.*
-  format json
-</source>
 
-<filter named.**>
-  @type deirdre_test_filter
+<filter **>
+  @type record_transformer
+  <record>
+    message lacroix
+  </record>
 </filter>
 
-<filter kubernetes.**>
-  type kubernetes_metadata
-</filter>
 
 <match **>
   @type               kafka_buffered
