removed time format and replace test filter

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -2,7 +2,6 @@
   @type tail
   path /var/log/containers/*/*.*
   pos_file fluentd-namedfile.pos
-  time_format %Y-%m-%dT%H:%M:%S
   tag named.*
   format none
 </source>
@@ -15,6 +14,9 @@
   </record>
 </filter>
 
+<filter named.**>
+  @type deirdre_test_filter
+</filter>
 
 <match **>
   @type               kafka_buffered
