added kube metadata filter to named log collection

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -10,6 +10,10 @@
   @type deirdre_test_filter
 </filter>
 
+<filter kubernetes.**>
+  type kubernetes_metadata
+</filter>
+
 <match **>
   @type               kafka_buffered
   zookeeper           zk:2181
