--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -6,11 +6,25 @@
   format none
 </source>
 
+<source>
+  @type tail
+  path /var/log/containers/*.log
+  pos_file fluentd-docker.pos
+  time_format %Y-%m-%dT%H:%M:%S
+  tag kubernetes.*
+  format json
+</source>
+
 <filter named.**>
   @type deirdre_test_filter
+  tag kubernetes.*
 </filter>
 
-<filter **>
+<filter named.**>
+  @type kubernetes_metadata
+</filter>
+
+<filter kubernetes.**>
   @type kubernetes_metadata
 </filter>
 
