added tag_to_kube_name_regex parameter

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -3,6 +3,7 @@
   path /var/log/containers/*/*.*
   pos_file fluentd-namedfile.pos
   tag named.*
+  tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)'
   format none
 </source>
 
