added paren match

--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -17,7 +17,7 @@
 
 <filter named.**>
   @type kubernetes_metadata
-  tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)_(?<docker_id>\d)(?<container_name>\+'
+  tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)_(?<docker_id>\d)(?<container_name>\d)'
 </filter>
 
 <filter kubernetes.**>
