--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -16,6 +16,10 @@
 </source>
 
 <filter named.**>
+  @type deirdre_test_filter
+</filter>
+
+<filter named.**>
   @type kubernetes_metadata
   tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)_(?<docker_id>\d)(?<container_name>\d)'
 </filter>
