--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -21,7 +21,7 @@
 
 <filter named.**>
   @type kubernetes_metadata
-  tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)_(?<docker_id>\d)(?<container_name>\d)'
+  tag_to_kubernetes_name_regexp 'var\.log\.containers\.(?<pod_name>[^_]+)_(?<namespace>[^_]+)_(?<container_name>[^_]+)_(?<docker_id>[^\.]+)'
 </filter>
 
 <filter kubernetes.**>
