--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -1,6 +1,6 @@
 <source>
   @type tail
-  path /var/log/containers/*/*.*
+  path /var/log/containers/*[^.log]/*
   pos_file fluentd-namedfile.pos
   tag named.*
   format none
