--- a/init/fluent.conf
+++ b/init/fluent.conf
@@ -3,7 +3,7 @@
   path /var/log/containers/*[^.log]/*
   pos_file fluentd-namedfile.pos
   tag named.*
-  format json
+  format none
 </source>
 
 <source>
