added dependency to run monitoring script

--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -11,11 +11,17 @@ RUN apk --no-cache --update add sudo build-base ruby-dev && \
     sudo -u fluent gem install fluent-plugin-record-reformer && \
     sudo -u fluent gem install zookeeper && \
     sudo -u fluent gem install fluent-plugin-kubernetes_metadata_filter && \
+    sudo apk add procps && \
 
     rm -rf /home/fluent/.gem/ruby/2.3.0/cache/*.gem && sudo -u fluent gem sources -c && \
     apk del sudo build-base ruby-dev && rm -rf /var/cache/apk/*
 
 EXPOSE 24284
 
+COPY start.sh /
+RUN ["chmod", "+x", "/start.sh"]
+
 USER root
 CMD exec fluentd -c /fluentd/etc/$FLUENTD_CONF -p /fluentd/plugins $FLUENTD_OPT
+
+
