--- a/fluentd-daemonset.yaml
+++ b/fluentd-daemonset.yaml
@@ -1,23 +1,77 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: fluentd-daemon
+  namespace: kube-system
+  labels:
+    component: fluentd-daemon
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: fluentd-daemon
+  labels:
+    component: fluentd-daemon
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - "namespaces"
+  - "pods"
+  verbs:
+  - "get"
+  - "watch"
+  - "list"
+
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: fluentd-daemon
+  labels:
+    component: fluentd-daemon
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+subjects:
+- kind: ServiceAccount
+  name: fluentd-daemon
+  namespace: kube-system
+  apiGroup: ""
+roleRef:
+  kind: ClusterRole
+  name: fluentd-daemon
+  apiGroup: ""
+
+---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: fluentd-daemon
+  namespace: kube-system
   labels:
     app: log-app
-  labels:
-    k8s-app: fluentd-logging
+    component: fluentd-daemon
     version: v1
     kubernetes.io/cluster-service: "true"
 spec:
   template:
     metadata:
       labels:
-        k8s-app: fluentd-logging
+        component: fluentd-daemon
         version: v1
         kubernetes.io/cluster-service: "true"
+      annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
+      serviceAccountName: fluentd-daemon
       containers:
-      - name: fluentd-kafka
+      - name: fluentd-daemon
         image: quay.io/samsung_cnct/fluentd_daemonset
         resources:
           limits:
