--- a/fluentd-daemonset.yaml
+++ b/fluentd-daemonset.yaml
@@ -19,15 +19,9 @@ metadata:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - "namespaces"
-  - "pods"
-  verbs:
-  - "get"
-  - "watch"
-  - "list"
+- apiGroups: [""]
+  resources: ["namespaces", "pods"]
+  verbs: ["get", "watch", "list"]
 
 ---
 kind: ClusterRoleBinding
