--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -1,16 +1,18 @@
-FROM fluent/fluentd:latest-onbuild
+FROM fluent/fluentd:v0.12.38
 MAINTAINER YOUR_NAME <leahnpetersen@gmail.com>
 WORKDIR /home/fluent
 ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
 USER root
+# add -s /bin/sh if necessary
+RUN adduser -S fluent
 RUN apk --no-cache --update add sudo build-base ruby-dev && \
 
-    sudo -u fluent gem install fluent-plugin-secure-forward && \
-    sudo -u fluent gem install fluent-plugin-kafka &&\
-    sudo -u fluent gem install fluent-plugin-record-reformer && \
-    sudo -u fluent gem install zookeeper && \
-    sudo -u fluent gem install fluent-plugin-kubernetes_metadata_filter && \
+    gem install fluent-plugin-secure-forward \
+                fluent-plugin-kafka \
+                fluent-plugin-record-reformer \
+                zookeeper \
+                fluent-plugin-kubernetes_metadata_filter && \
     sudo apk add procps && \
 
     rm -rf /home/fluent/.gem/ruby/2.3.0/cache/*.gem && sudo -u fluent gem sources -c && \
