--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -1,4 +1,4 @@
-FROM fluent/fluentd:latest-onbuild
+FROM fluent/fluentd:v0.12.38
 MAINTAINER YOUR_NAME <leahnpetersen@gmail.com>
 WORKDIR /home/fluent
 ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
@@ -6,14 +6,14 @@ ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 USER root
 RUN apk --no-cache --update add sudo build-base ruby-dev && \
 
-    sudo -u fluent gem install fluent-plugin-secure-forward && \
-    sudo -u fluent gem install fluent-plugin-kafka &&\
-    sudo -u fluent gem install fluent-plugin-record-reformer && \
-    sudo -u fluent gem install zookeeper && \
-    sudo -u fluent gem install fluent-plugin-kubernetes_metadata_filter && \
+    gem install fluent-plugin-secure-forward \
+                fluent-plugin-kafka \
+                fluent-plugin-record-reformer \
+                zookeeper \
+                fluent-plugin-kubernetes_metadata_filter && \
     sudo apk add procps && \
 
-    rm -rf /home/fluent/.gem/ruby/2.3.0/cache/*.gem && sudo -u fluent gem sources -c && \
+    sudo gem sources -c && \
     apk del sudo build-base ruby-dev && rm -rf /var/cache/apk/*
 
 EXPOSE 24284
